# midas-journal-802

cuda-insight-toolkit/: patch.3.20.0.dif
cuda-insight-toolkit/Examples/: CMakeLists.txt
cuda-insight-toolkit/Examples/CMake/cuda/: FindCUDA.cmake
cuda-insight-toolkit/Examples/src/: CMakeCache.txt  CMakeLists.txt  CudaTest.h  EclipseCompat.h  ImageCompare.cxx  LukeITK_513x385.mhd  affine.mhd  external_dependency.h  external_dependency3.h  input.mhd  input3D.mhd  itk-cpu-abs.cxx  itk-cpu-add.cxx  itk-cpu-addc.cxx  itk-cpu-binarythreshold.cxx  itk-cpu-close.cxx  itk-cpu-dilate.cxx  itk-cpu-divide.cxx  itk-cpu-dividec.cxx  itk-cpu-erode.cxx  itk-cpu-maximum.cxx  itk-cpu-mean.cxx  itk-cpu-minimum.cxx  itk-cpu-multiply.cxx  itk-cpu-multiplyc.cxx  itk-cpu-open.cxx  itk-cpu-rescaleintensity.cxx  itk-cpu-statistics.cxx  itk-cpu-subtract.cxx  itk-cpu-subtractc.cxx  itk-cuda-driver.cxx  itk-gpu-abs.cxx  itk-gpu-add.cxx  itk-gpu-addc.cxx  itk-gpu-binarythreshold.cxx  itk-gpu-close.cxx  itk-gpu-dilate.cxx  itk-gpu-divide.cxx  itk-gpu-dividec.cxx  itk-gpu-erode.cxx  (+23 more)
cuda-insight-toolkit/Examples/src/AbsImageFilter/: CudaAbsImageFilter.h  CudaAbsImageFilter.txx  CudaAbsImageFilterKernel.cu  CudaAbsImageFilterKernel.h
cuda-insight-toolkit/Examples/src/AddConstantToImageFilter/: CudaAddConstantToImageFilter.h  CudaAddConstantToImageFilter.txx  CudaAddConstantToImageFilterKernel.cu  CudaAddConstantToImageFilterKernel.h
cuda-insight-toolkit/Examples/src/AddImageFilter/: CudaAddImageFilter.h  CudaAddImageFilter.txx  CudaAddImageFilterKernel.cu  CudaAddImageFilterKernel.h
cuda-insight-toolkit/Examples/src/BackUpCudaFunctions/: CudaNeighborhoodFunctions.cu
cuda-insight-toolkit/Examples/src/BackUpNeighborhoodFilter/: CudaNeighborhoodFilter.h  CudaNeighborhoodFilter.txx  CudaNeighborhoodFilterKernel.cu  CudaNeighborhoodFilterKernel.h
cuda-insight-toolkit/Examples/src/BinaryThresholdImageFilter/: CudaBinaryThresholdImageFilter.h  CudaBinaryThresholdImageFilter.txx  CudaBinaryThresholdImageFilterKernel.cu  CudaBinaryThresholdImageFilterKernel.h
cuda-insight-toolkit/Examples/src/Common/: CudaImageToImageFilter.h  CudaImageToImageFilter.txx  CudaInPlaceImageFilter.h  CudaInPlaceImageFilter.txx
cuda-insight-toolkit/Examples/src/CudaFunctions/: CudaNeighborhoodFunctions.cu  CudaTextureFunctions.cu
cuda-insight-toolkit/Examples/src/DivideByConstantImageFilter/: CudaDivideByConstantImageFilter.h  CudaDivideByConstantImageFilter.txx  CudaDivideByConstantImageFilterKernel.cu  CudaDivideByConstantImageFilterKernel.h
cuda-insight-toolkit/Examples/src/DivideImageFilter/: CudaDivideImageFilter.h  CudaDivideImageFilter.txx  CudaDivideImageFilterKernel.cu  CudaDivideImageFilterKernel.h
cuda-insight-toolkit/Examples/src/FilterTemplate/: CudaFilter.h  CudaFilter.txx  CudaFilterKernel.cu  CudaFilterKernel.h
cuda-insight-toolkit/Examples/src/GrayscaleDilateImageFilter/: CudaGrayscaleDilateImageFilter.h  CudaGrayscaleDilateImageFilter.txx  CudaGrayscaleDilateImageFilterKernel.cu  CudaGrayscaleDilateImageFilterKernel.h
cuda-insight-toolkit/Examples/src/GrayscaleErodeImageFilter/: CudaGrayscaleErodeImageFilter.h  CudaGrayscaleErodeImageFilter.txx  CudaGrayscaleErodeImageFilterKernel.cu  CudaGrayscaleErodeImageFilterKernel.h
cuda-insight-toolkit/Examples/src/GrayscaleMorphologicalClosingImageFilter/: CudaGrayscaleMorphologicalClosingImageFilter.h  CudaGrayscaleMorphologicalClosingImageFilter.txx
cuda-insight-toolkit/Examples/src/GrayscaleMorphologicalOpeningImageFilter/: CudaGrayscaleMorphologicalOpeningImageFilter.h  CudaGrayscaleMorphologicalOpeningImageFilter.txx
cuda-insight-toolkit/Examples/src/MaximumImageFilter/: CudaMaximumImageFilter.h  CudaMaximumImageFilter.txx  CudaMaximumImageFilterKernel.cu  CudaMaximumImageFilterKernel.h
cuda-insight-toolkit/Examples/src/MeanImageFilter/: CudaMeanImageFilter.h  CudaMeanImageFilter.txx  CudaMeanImageFilterKernel.cu  CudaMeanImageFilterKernel.h
cuda-insight-toolkit/Examples/src/MinimumImageFilter/: CudaMinimumImageFilter.h  CudaMinimumImageFilter.txx  CudaMinimumImageFilterKernel.cu  CudaMinimumImageFilterKernel.h
cuda-insight-toolkit/Examples/src/MultiplyByConstantImageFilter/: CudaMultiplyByConstantImageFilter.h  CudaMultiplyByConstantImageFilter.txx  CudaMultiplyByConstantImageFilterKernel.cu  CudaMultiplyByConstantImageFilterKernel.h
cuda-insight-toolkit/Examples/src/MultiplyImageFilter/: CudaMultiplyImageFilter.h  CudaMultiplyImageFilter.txx  CudaMultiplyImageFilterKernel.cu  CudaMultiplyImageFilterKernel.h
cuda-insight-toolkit/Examples/src/NeighborhoodFilter/: CudaNeighborhoodFilter.h  CudaNeighborhoodFilterKernel.cu
cuda-insight-toolkit/Examples/src/RescaleIntensityImageFilter/: CudaRescaleIntensityImageFilter.h  CudaRescaleIntensityImageFilter.txx  CudaRescaleIntensityImageFilterKernel.cu  CudaRescaleIntensityImageFilterKernel.h
cuda-insight-toolkit/Examples/src/StatisticsImageFilter/: CudaStatisticsImageFilter.h  CudaStatisticsImageFilter.txx  CudaStatisticsImageFilterKernel.cu  CudaStatisticsImageFilterKernel.h
cuda-insight-toolkit/Examples/src/SubtractConstantFromImageFilter/: CudaSubtractConstantFromImageFilter.h  CudaSubtractConstantFromImageFilter.txx  CudaSubtractConstantFromImageFilterKernel.cu  CudaSubtractConstantFromImageFilterKernel.h
cuda-insight-toolkit/Examples/src/SubtractImageFilter/: CudaSubtractImageFilter.h  CudaSubtractImageFilter.txx  CudaSubtractImageFilterKernel.cu  CudaSubtractImageFilterKernel.h
cuda-insight-toolkit/Profiling/: add_profile.csv  config.txt  setup_profiling.sh
cuda-insight-toolkit/article/: Article.tex  Makefile
